specs/001-typescript-to-zig-native/examples/valid/export-default-main.ts
import twice from "./export-default-helper.ts";

console.log(twice(6));
