specs/001-typescript-to-zig-native/examples/invalid/import-remote-insecure.ts
import add from "http://example.com/math.ts";

console.log(1);
